<resources>
    <string name="app_name">Covider Admin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
<<<<<<< HEAD

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="logo_string">C O V I D E R \n A D M I N</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
=======
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name_placeholder">Enter full names</string>
    <string name="id_placeholder">ID Card number</string>
    <string name="login_text">Login</string>
    <string name="verify">Verify</string>
    <string name="set">Set</string>
    <string name="found">Found</string>
    <string name="submit">Submit</string>
    <string name="location_text">Upload your home location</string>
    <string name="country_region_city">Country, Region, City</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_dmser_locaton_map">Map</string>
    <string name="title_activity_dm_user_location">Map</string>
    <string name="enter_token">Enter Token</string>
    <string name="signs_and_symptoms">Signs and syntoms</string>
    <string name="health_information">Health Information</string>
    <string name="notification">Notifications</string>
    <string name="users">Users</string>
    <string name="_3_places_you_lastly_visited">3 places you lastly visited</string>
    <string name="fever">Fever</string>
    <string name="dry_cough">Dry Cough</string>
    <string name="tiredness">Tiredness</string>
    <string name="fill_hints">Cameroon, Nigeria, Africa</string>
    <string name="logo_icon">logo_icon</string>
    <string name="contact_us">Contact us</string>
    <string name="to_">To: Covider</string>
    <string name="message">Message</string>
    <string name="list_view_to_contain_username_user_location_longitude_and_latitude">List view to contain username, user location: longitude and latitude</string>
>>>>>>> 8ee69e5e3b463869ee5151e9440e42492c48b4aa
</resources>
