<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".dmLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        >


        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            />
        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_text"
            android:textColor="#542F5A"
            android:textSize="20sp"
            android:background="@drawable/button"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_location"
            android:padding="5dp"
            android:drawablePadding="3dp"
            />

        <Button
            android:id="@+id/login_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textColor="#542F5A"
            android:textSize="20sp"
            android:background="@drawable/button"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:elevation="20pt"
            />

    </LinearLayout>
                <EditText
                    android:id="@+id/name_p"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="5dp"
                    android:hint="@string/name_placeholder"
                    android:inputType="text"
                    android:padding="20dp"
                    android:paddingStart="5dp"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/id_p"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:drawableStart="@drawable/ic_card"
                    android:drawablePadding="5dp"
                    android:hint="@string/id_placeholder"
                    android:inputType="text"
                    android:padding="20dp"
                    android:paddingStart="5dp"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry"
                    android:importantForAutofill="no" />
                <EditText
                    android:id="@+id/id_token"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:drawableStart="@drawable/ic_eye"
                    android:drawablePadding="5dp"
                    android:hint="@string/enter_token"
                    android:inputType="numberDecimal"
                    android:padding="20dp"
                    android:paddingStart="5dp"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="18sp"
                    android:importantForAutofill="no"
                    tools:ignore="RtlSymmetry" />

</ScrollView>