<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".dmVerifyUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
<<<<<<< HEAD
<<<<<<< HEAD
        android:gravity="center">
=======
        android:gravity="center"
        >
>>>>>>> 5940aab... distribution module
=======
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">
>>>>>>> 451456b... distribution module

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/logo"
            android:paddingTop="10dp"
            android:contentDescription="@string/logo_icon" />
        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
<<<<<<< HEAD
<<<<<<< HEAD
=======
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
>>>>>>> 451456b... distribution module
=======
>>>>>>> 9b23a98... distribution module
            android:textStyle="bold" />


        <EditText
            android:id="@+id/name_p"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/name_placeholder"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="20sp"
            android:paddingStart="5dp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_person"
            android:layout_margin="20dp"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="5dp"
            android:padding="20dp"
            tools:ignore="RtlSymmetry"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/id_p"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/id_placeholder"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="20sp"
            android:paddingStart="5dp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_card"
            android:layout_margin="20dp"
            android:drawablePadding="5dp"
            android:padding="20dp"
            tools:ignore="RtlSymmetry"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/verify_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
<<<<<<< HEAD
<<<<<<< HEAD
            android:elevation="20pt" />

    </LinearLayout>

=======
=======
            android:background="@drawable/button"
>>>>>>> 451456b... distribution module
            android:elevation="20pt"
            android:text="@string/verify"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>
>>>>>>> 7f3a083... distribution module
</ScrollView>
